--- a/templates/asosiasiData.html
+++ b/templates/asosiasiData.html
@@ -20,56 +20,180 @@
 
     <section class="content">
         <div class="container-fluid">
+            <div class="card-header">
+                <h3 class="card-title">Cluster 1</h3>
+            </div>
+            <!-- /.card-header -->
 
+
+            <div class="card-body p-0">
+                <table class="table table-sm">
+                    <thead>
+                        <tr>
+
+                            <th style="width: 10px">No.</th>
+                            <th>Jika item ini muncul</th>
+                            <th>=></th>
+                            <th>Maka item ini juga</th>
+
+                            <th>Confidence</th>
+                            <th>Lift</th>
+                            <th>Conviction</th>
+
+
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for detail in details1 %}
+                        <tr>
+
+                            <td>{{loop.index}}</td>
+                            <td>{{ detail[0]}}</td>
+                            <td>=></td>
+                            <td>{{ detail[1]}}</td>
+                            <td>{{ detail[2]}}</td>
+                            <td>{{ detail[3]}}</td>
+                            <td>{{ detail[4]}}</td>
+
+                        </tr>
+
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+            <!-- /.card-body -->
+
+            <div class="card-header">
+                <h3 class="card-title">Cluster 2</h3>
+            </div>
+            <!-- /.card-header -->
+
+
+            <div class="card-body p-0">
+                <table class="table table-sm">
+                    <thead>
+                        <tr>
+
+                            <th style="width: 10px">No.</th>
+                            <th>Jika item ini muncul</th>
+                            <th>=></th>
+                            <th>Maka item ini juga</th>
+
+                            <th>Confidence</th>
+                            <th>Lift</th>
+                            <th>Conviction</th>
+
+
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for detail in details2 %}
+                        <tr>
+
+                            <td>{{loop.index}}</td>
+                            <td>{{ detail[0]}}</td>
+                            <td>=></td>
+                            <td>{{ detail[1]}}</td>
+                            <td>{{ detail[2]}}</td>
+                            <td>{{ detail[3]}}</td>
+                            <td>{{ detail[4]}}</td>
+
+                        </tr>
+
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+            <!-- /.card-body -->
+
+            <div class="card-header">
+                <h3 class="card-title">Cluster 3</h3>
+            </div>
+            <!-- /.card-header -->
+
+
+            <div class="card-body p-0">
+                <table class="table table-sm">
+                    <thead>
+                        <tr>
+
+                            <th style="width: 10px">No.</th>
+                            <th>Jika item ini muncul</th>
+                            <th>=></th>
+                            <th>Maka item ini juga</th>
+
+                            <th>Confidence</th>
+                            <th>Lift</th>
+                            <th>Conviction</th>
+
+
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for detail in details3 %}
+                        <tr>
+
+                            <td>{{loop.index}}</td>
+                            <td>{{ detail[0]}}</td>
+                            <td>=></td>
+                            <td>{{ detail[1]}}</td>
+                            <td>{{ detail[2]}}</td>
+                            <td>{{ detail[3]}}</td>
+                            <td>{{ detail[4]}}</td>
+
+                        </tr>
+
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+            <!-- /.card-body -->
+
+            <div class="card-header">
+                <h3 class="card-title">Cluster 4</h3>
+            </div>
+            <!-- /.card-header -->
+
+
+            <div class="card-body p-0">
+                <table class="table table-sm">
+                    <thead>
+                        <tr>
+
+                            <th style="width: 10px">No.</th>
+                            <th>Jika item ini muncul</th>
+                            <th>=></th>
+                            <th>Maka item ini juga</th>
+
+                            <th>Confidence</th>
+                            <th>Lift</th>
+                            <th>Conviction</th>
+
+
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for detail in details4 %}
+                        <tr>
+
+                            <td>{{loop.index}}</td>
+                            <td>{{ detail[0]}}</td>
+                            <td>=></td>
+                            <td>{{ detail[1]}}</td>
+                            <td>{{ detail[2]}}</td>
+                            <td>{{ detail[3]}}</td>
+                            <td>{{ detail[4]}}</td>
+
+                        </tr>
+
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+            <!-- /.card-body -->
         </div>
     </section>
-    <!--
-    <section class="content">
-        <section class="content">
-            <div class="container-fluid">
-                <div class="row">
-                    <!-- left column 
-                    <div class="col-md-6">
-                        <!-- general form elements 
-                        <div class="card card-primary">
-                            <div class="card-header">
-                                <h3 class="card-title">Form</h3>
-                            </div>
-                            <!-- /.card-header -->
-    <!-- form start 
-                            <form>
-                                <!--
-                                <div class="card-body">
-                                    <div class="form-group">
-                                        <label for="exampleInputEmail1">Minimum Support</label>
-                                        <input type="number" class="form-control" id="exampleInputEmail1" placeholder="support">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="exampleInputPassword1">Minimum confidence</label>
-                                        <input type="number" class="form-control" id="exampleInputPassword1" placeholder="confidence">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="exampleInputFile">File input</label>
-                                        <div class="input-group">
-                                            <div class="custom-file">y
-                                                <input type="file" class="custom-file-input" id="exampleInputFile">
-                                                <label class="custom-file-label" for="exampleInputFile">Choose file</label>
-                                            </div>
-                                            <div class="input-group-append">
-                                                <span class="input-group-text">Upload</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <div>
-                                            <a href="/template/asosiasi.xls">Download Template</a>
-                                        </div>
-                                    </div>
 
-                                </div>-->
-    <!-- /.card-body -->
-
-    <!-- /.content -->
 </div>
 <!-- /.content-wrapper -->
 {% include 'footer.html'%}
