Modify template header v2

--- a/templates/header.html
+++ b/templates/header.html
@@ -151,6 +151,14 @@
                                     </a>
                                 </li>
                             </ul>
+                            <ul class="nav nav-treeview">
+                                <li class="nav-item">
+                                    <a href="/asosiasiData" class="nav-link {% if submenu=='asosiasiData' %} active{% endif %}">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Asosiasi Result</p>
+                                    </a>
+                                </li>
+                            </ul>
                         </li>
 
 
