--- a/templates/header.html
+++ b/templates/header.html
@@ -47,22 +47,9 @@
             <ul class="navbar-nav ml-auto">
                 <!-- Navbar Search -->
                 <li class="nav-item">
-                    <a class="nav-link" data-widget="navbar-search" href="#" role="button">
-                        <i class="fas fa-search"></i>
-                    </a>
-                    <div class="navbar-search-block">
-                        <form class="form-inline">
-                            <div class="input-group input-group-sm">
-                                <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
-                                <div class="input-group-append">
-                                    <button class="btn btn-navbar" type="submit">
-                  <i class="fas fa-search"></i>
-                </button>
-                                    <button class="btn btn-navbar" type="button" data-widget="navbar-search">
-                  <i class="fas fa-times"></i>
-                </button>
-                                </div>
-                            </div>
+                    <div class="form">
+                        <form action="{{ url_for('logout') }}" method="post">
+                            <input type="submit" class="btn btn-outline-danger" name="submit" value="Logout">
                         </form>
                     </div>
                 </li>
@@ -87,9 +74,12 @@
                         <img src="../static/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
                     </div>
                     <div class="info">
-                        <a href="#" class="d-block">Admin 1</a>
+                        <a href="#" class="d-block">{{username}}</a>
                     </div>
+
+
                 </div>
+
 
                 <!-- SidebarSearch Form -->
                 <div class="form-inline">
