--- a/templates/login.html
+++ b/templates/login.html
@@ -29,66 +29,89 @@
 </head>
 
 <!-- Content Wrapper. Contains page content -->
-<div class="">
-    <section class="content">
-        <div class="container-fluid">
-            <form action='/login' method='POST'>
-                <div class="form-group">
-                    <label for="name">Username</label>
-                    <input type="text" class="form-control" name="username" id="username" required>
-                </div>
-                <div class="form-group">
-                    <label for="name">Password</label>
-                    <input type="password" class="form-control" name="password" id="password" required>
-                </div>
-                <div class="msg">{{msg}}</div>
-                <div class="form-group">
 
-                    <input type="submit" class="btn btn-success" name="submit" value="Login">
+<body class="hold-transition login-page">
+    <div class="msg">
+        {{msg}}
+
+    </div>
+<div class="login-box">
+    <div class="login-logo">
+        <a href="../../index2.html"><b>Login</b>Page</a>
+    </div>
+    <!-- /.login-logo -->
+    <div class="card">
+        <div class="card-body login-card-body">
+            <p class="login-box-msg">Sign in to start your session</p>
+            <form action='/login' method='POST'>
+                <div class="input-group mb-3">
+
+                    <input type="text" class="form-control" name="username" id="username" required placeholder="Username">
+                    <div class="input-group-append">
+                        <div class="input-group-text">
+                            <span class="fas fa-user"></span>
+                        </div>
+                    </div>
                 </div>
+
+                <div class="input-group mb-3">
+                    <input type="password" class="form-control" name="password" id="password" placeholder="Password" required>
+                    <div class="input-group-append">
+                        <div class="input-group-text">
+                            <span class="fas fa-lock"></span>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="input-group mt-3">
+                    <input type="submit" class="btn btn-primary btn-block" name="submit" value="Login">
+                </div> 
+                <p class="my-2">
+                    <a href="register" class="text-center">Click here </a>to register a new account!
+                </p>
             </form>
         </div>
 
-        <!-- /.card -->
-    </section>
-</div>
+    </div>
 
+</body
 
+    <!-- jQuery -->
+    <script src="{{url_for ('static', filename='plugins/jquery/jquery.min.js' ) }}"></script>
+    <!-- jQuery UI 1.11.4 -->
+    <script src="{{url_for ('static', filename='plugins/jquery-ui/jquery-ui.min.js' ) }}"></script>
+    <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
+    <script>
+        $.widget.bridge('uibutton', $.ui.button)
+    </script>
+    <!-- Bootstrap 4 -->
+    <script src="{{url_for ('static', filename='plugins/bootstrap/js/bootstrap.bundle.min.js' ) }}"></script>
+    <!-- ChartJS -->
+    <script src="{{url_for ('static', filename='plugins/chart.js/Chart.min.js' ) }}"></script>
+    <!-- Sparkline -->
+    <script src="{{url_for ('static', filename='plugins/sparklines/sparkline.js' ) }}"></script>
+    <!-- JQVMap -->
+    <script src="{{url_for ('static', filename='plugins/jqvmap/jquery.vmap.min.js' ) }}"></script>
+    <script src="{{url_for ('static', filename='plugins/jqvmap/maps/jquery.vmap.usa.js' ) }}"></script>
+    <!-- jQuery Knob Chart -->
+    <script src="{{url_for ('static', filename='plugins/jquery-knob/jquery.knob.min.js' ) }}"></script>
+    <!-- daterangepicker -->
+    <script src="{{url_for ('static', filename='plugins/moment/moment.min.js' ) }}"></script>
+    <script src="{{url_for ('static', filename='plugins/daterangepicker/daterangepicker.js' ) }}"></script>
+    <!-- Tempusdominus Bootstrap 4 -->
+    <script src="{{url_for ('static', filename='plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js' ) }}"></script>
+    <!-- Summernote -->
+    <script src="{{url_for ('static', filename='plugins/summernote/summernote-bs4.min.js' ) }}"></script>
+    <!-- overlayScrollbars -->
+    <script src="{{url_for ('static', filename='plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js' ) }}"></script>
+    <!-- AdminLTE App -->
+    <script src="{{url_for ('static', filename='dist/js/adminlte.js' ) }}"></script>
+    <!-- AdminLTE for demo purposes -->
+    <script src="{{url_for ('static', filename='dist/js/demo.js') }}"></script>
+    <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
+    <script src="{{url_for ('static', filename='dist/js/pages/dashboard.js' ) }}"></script>
+    </body>
 
-<!-- jQuery -->
-<script src="{{url_for ('static', filename='plugins/jquery/jquery.min.js' ) }}"></script>
-<!-- jQuery UI 1.11.4 -->
-<script src="{{url_for ('static', filename='plugins/jquery-ui/jquery-ui.min.js' ) }}"></script>
-<!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
-<script>
-    $.widget.bridge('uibutton', $.ui.button)
-</script>
-<!-- Bootstrap 4 -->
-<script src="{{url_for ('static', filename='plugins/bootstrap/js/bootstrap.bundle.min.js' ) }}"></script>
-<!-- ChartJS -->
-<script src="{{url_for ('static', filename='plugins/chart.js/Chart.min.js' ) }}"></script>
-<!-- Sparkline -->
-<script src="{{url_for ('static', filename='plugins/sparklines/sparkline.js' ) }}"></script>
-<!-- JQVMap -->
-<script src="{{url_for ('static', filename='plugins/jqvmap/jquery.vmap.min.js' ) }}"></script>
-<script src="{{url_for ('static', filename='plugins/jqvmap/maps/jquery.vmap.usa.js' ) }}"></script>
-<!-- jQuery Knob Chart -->
-<script src="{{url_for ('static', filename='plugins/jquery-knob/jquery.knob.min.js' ) }}"></script>
-<!-- daterangepicker -->
-<script src="{{url_for ('static', filename='plugins/moment/moment.min.js' ) }}"></script>
-<script src="{{url_for ('static', filename='plugins/daterangepicker/daterangepicker.js' ) }}"></script>
-<!-- Tempusdominus Bootstrap 4 -->
-<script src="{{url_for ('static', filename='plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js' ) }}"></script>
-<!-- Summernote -->
-<script src="{{url_for ('static', filename='plugins/summernote/summernote-bs4.min.js' ) }}"></script>
-<!-- overlayScrollbars -->
-<script src="{{url_for ('static', filename='plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js' ) }}"></script>
-<!-- AdminLTE App -->
-<script src="{{url_for ('static', filename='dist/js/adminlte.js' ) }}"></script>
-<!-- AdminLTE for demo purposes -->
-<script src="{{url_for ('static', filename='dist/js/demo.js') }}"></script>
-<!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-<script src="{{url_for ('static', filename='dist/js/pages/dashboard.js' ) }}"></script>
-</body>
 
 </html>
