--- a/templates/clustering-result.html
+++ b/templates/clustering-result.html
@@ -18,18 +18,29 @@
     <!-- /.content-header -->
     <!-- Main content -->
     <section class="content">
-
-        <div class="card-header">
-            <h3 class="card-title">Table</h3>
-        </div>
+        <div id="clusteringResult"></div>
+        <div class="card">
+            <div class="card-header">
+              <h3 class="card-title">Data with clustering result</h3>
+            </div>
         <!-- /.card-header -->
 
 
-        <div class="card-body p-0">
-            <table class="table table-sm">
+            <div class="card-body p-0">
+                 <!--
+                <div class="row">
+                    <div class="col-sm-12 col-md-6">
+                        <div class="dt-buttons btn-group flex-wrap">
+                            <button class="btn btn-secondary buttons-csv buttons-html5" aria-controls="exaple1" type="button">
+                                <span>CSV</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                -->
+            <table class="table table-sm" class="table table-bordered table-striped">
                 <thead>
                     <tr>
-
                         <th style="width: 10px">No.</th>
                         <th>NIK</th>
                         <th>KPI</th>
@@ -41,7 +52,6 @@
                         <th>Lebih Cepat</th>
                         <th>Aktif Bersama</th>
                         <th>Cluster</th>
-
                     </tr>
                 </thead>
                 <tbody>
@@ -66,11 +76,51 @@
             </table>
         </div>
         <!-- /.card-body -->
+
 </div>
 <!-- /.card -->
 </div>
 </section>
 <!-- /.content -->
 </div>
+<!-- DataTables  & Plugins -->
+<script src="../static/plugins/datatables/jquery.dataTables.min.js"></script>
+<script src="../static/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
+<script src="../static/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
+<script src="../static/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
+<script src="../static/plugins/datatables-buttons/js/dataTables.buttons.min.js"></script>
+<script src="../static/plugins/datatables-buttons/js/buttons.bootstrap4.min.js"></script>
+<script src="../static/plugins/jszip/jszip.min.js"></script>
+<script src="../static/plugins/pdfmake/pdfmake.min.js"></script>
+<script src="../static/plugins/pdfmake/vfs_fonts.js"></script>
+<script src="../static/plugins/datatables-buttons/js/buttons.html5.min.js"></script>
+<script src="../static/plugins/datatables-buttons/js/buttons.print.min.js"></script>
+<script src="../.static/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
+<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+<script>
+    $(function () {
+      $("#example1").DataTable({
+        "responsive": true, "lengthChange": false, "autoWidth": false,
+        "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
+      }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
+      $('#example2').DataTable({
+        "paging": true,
+        "lengthChange": false,
+        "searching": false,
+        "ordering": true,
+        "info": true,
+        "autoWidth": false,
+        "responsive": true,
+      });
+    });
+  </script>
+<script type="text/javascript">
+    var graphs1 = {
+        {
+            graph1JSON | safe
+        }
+    };
+    Plotly.plot("clusteringResult", graphs1, {});
+</script>
 <!-- /.content-wrapper -->
 {% include 'footer.html'%}
