--- a/templates/clustering.html
+++ b/templates/clustering.html
@@ -1,88 +1,91 @@
 {%include 'header.html'%}
 
-<!-- Content Wrapper. Contains page content -->
-<div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    <div class="content-header">
-        <div class="container-fluid">
-            <div class="row mb-2">
-                <div class="col-sm-6">
-                    <h1 class="m-0">Clustering</h1>
-                </div>
-
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container-fluid -->
-    </div>
-
-    <section class="content">
-        <div class="container-fluid">
-            <form action='/clustering' method='POST' enctype='multipart/form-data'>
-                <div class='form-group'>
-                    <label>Select file</label>
-                    <div class='custom-file'>
-                        <input type='file' class='custom-file-input' name='file' id='file'>
-                        <label class='custom-file-label' for='file'>Select file..</label>
-
+<body class="hold-transition">
+    <!-- Content Wrapper. Contains page content -->
+    <section class="content ">
+        <div class=" content-wrapper">
+            <!-- Content Header (Page header) -->
+            <div class="container-fluid">
+                <div class="card card-info">
+                    <div class="card-header">
+                        <h3 class="card-title">Clustering</h3>
                     </div>
-                </div>
-                <button type='submit' class='btn btn-primary'>Upload file</button>
-            </form>
-        </div>
 
-        <!-- /.card -->
+                    <form action='/clustering' method='POST' enctype='multipart/form-data' class="form-horizontal">
+                        <div class='card-body'>
+                            <label class="col-sm-2 col-form-label">Select file</label>
+                            <div class='custom-file'>
+                                <div class="col-sm-10">
+                                    <input type='file' class='custom-file-input' name='file' id='file'>
+                                    <label class='custom-file-label' for='file'>Select file..</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <div class="input-form">
+                                <button type='submit' class='btn btn-primary'>Upload file</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+
+                <!-- /.card -->
     </section>
     <!-- /.content-header -->
     <!-- Main content 
 
-        <section class="content">
-            <div class="container-fluid">
-                <div class="row">
+        <section class="content ">
+            <div class="container-fluid ">
+                <div class="row ">
                     <!-- left column 
-                    <div class="col-md-6">
+                    <div class="col-md-6 ">
                         <!-- general form elements
-                        <div class="card card-primary">
-                            <div class="card-header">
-                                <h3 class="card-title">Form Clustering Data</h3>
+                        <div class="card card-primary ">
+                            <div class="card-header ">
+                                <h3 class="card-title ">Form Clustering Data</h3>
                             </div>
                             <!-- /.card-header -->
     <!-- form start 
-                            <form action="/clustering" method="POST" enctype = "multipart/form-data">
-                                <div class="card-body">
-                                   <!-- <div class="form-group">
-                                        <label for="inputCluster">K berapa</label>
-                                        <input type="number" class="form-control" id="inputCluster" name="cluster" placeholder="Enter cluster">
+                            <form action="/clustering " method="POST " enctype = "multipart/form-data ">
+                                <div class="card-body ">
+                                   <!-- <div class="form-group ">
+                                        <label for="inputCluster ">K berapa</label>
+                                        <input type="number " class="form-control " id="inputCluster " name="cluster " placeholder="Enter cluster ">
                                     <div>
-                                             <a href="/template/clustering.xls" style="color:white">Download Template</a>
+                                             <a href="/template/clustering.xls " style="color:white ">Download Template</a>
                                         </div>
                                   
                                     </div>
-                                    <div class="form-group">
+                                    <div class="form-group ">
                                         <label>File input</label>
                                         
-                                            <div class="custom-file">
-                                                <input type="file" class="custom-file-input" name="file" >
-                                                <label class="custom-file-label">Choose file</label>
+                                            <div class="custom-file ">
+                                                <input type="file " class="custom-file-input " name="file " >
+                                                <label class="custom-file-label ">Choose file</label>
                                             </div>     
                                     </div>
                                 </div>
                                 <!-- /.card-body 
-                                <div class="card-footer">
-                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                <div class="card-footer ">
+                                    <button type="submit " class="btn btn-primary ">Submit</button>
                                 </div>
                             </form>
-                            <form action="/clustering" method = "POST" 
-         enctype = "multipart/form-data">
-         <input type = "file" name = "file" />
-         <input type = "submit"/>
+                            <form action="/clustering " method = "POST " 
+         enctype = "multipart/form-data ">
+         <input type = "file " name = "file " />
+         <input type = "submit "/>
       </form>
                         </div>
                         <!-- /.card 
 
         </section>
         <!-- /.content -->
-</div>
-
+    </div>
+</body>
+<!-- /.content-wrapper -->
+{% include 'footer.html'%}
+        <!-- /.content -->
+    </div>
+</body>
 <!-- /.content-wrapper -->
 {% include 'footer.html'%}
