--- a/templates/clustering.html
+++ b/templates/clustering.html
@@ -13,11 +13,21 @@
 
                     <form action='/clustering' method='POST' enctype='multipart/form-data' class="form-horizontal">
                         <div class='card-body'>
+                            <!-- Date -->
+                            <div class="form-group">
+                                <label>Date:</label>
+                                <div class="input-group date" id="reservationdate" data-target-input="nearest">
+                                    <input type="text" class="form-control datetimepicker-input" data-target="#reservationdate" name="date" id="date" />
+                                    <div class="input-group-append" data-target="#reservationdate" data-toggle="datetimepicker">
+                                        <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                                    </div>
+                                </div>
+                            </div>
                             <label class="col-sm-2 col-form-label">Select file</label>
                             <div class='custom-file'>
                                 <div class="col-sm-10">
                                     <input type='file' class='custom-file-input' name='file' id='file'>
-                                    <label class='custom-file-label' for='file'>Select file..</label>
+                                    <label class='custom-file-label' for='file'>Select file</label>
                                 </div>
                             </div>
                         </div>
@@ -81,11 +91,12 @@
         </section>
         <!-- /.content -->
     </div>
-</body>
-<!-- /.content-wrapper -->
-{% include 'footer.html'%}
-        <!-- /.content -->
-    </div>
+    <script>
+        //Date picker
+        $('#reservationdate').datetimepicker({
+            format: 'L'
+        });
+    </script>
 </body>
 <!-- /.content-wrapper -->
 {% include 'footer.html'%}
