--- a/templates/datapenilaian.html
+++ b/templates/datapenilaian.html
@@ -18,27 +18,27 @@
     <!-- /.content-header -->
     <!-- Main content -->
     <section class="content">
-        <h2><button type="button" class="btn btn-success  pull-right" data-toggle="modal" data-target="#myModal">Add Student Data</button></h2>
-        <div class="card">
-            <div class="card-header">
-                <h3 class="card-title">Table</h3>
+        <div class="col-12">
+            <div class="col-3">
+                <h2><button type="button" class="btn btn-success  pull-right" data-toggle="modal" data-target="#myModal">Add Data Per Item</button></h2>
             </div>
+            <div class="col-3">
+                <h2><button type="button" class="btn btn-success  pull-right" data-toggle="modal" data-target="#uploadFile">Add Data Via File</button></h2>
+            </div>
+        </div>
+
+
+
+        <div class="card">
+
             <!-- /.card-header -->
             <div id="myModal" class="modal fade" role="dialog">
-
-
                 <div class="modal-dialog">
-
-
                     <div class="modal-content">
-
-
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
-
                         </div>
                         <div class="modal-body">
-
 
                             <form action="{{ url_for('insert') }}" method="POST">
                                 <div class="form-group">
@@ -58,30 +58,92 @@
                 </div>
             </div>
 
+            <div id="uploadFile" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        </div>
+                        <div class="modal-body">
+
+                            <form action="{{ url_for('uploadFile') }}" method="POST" enctype='multipart/form-data' class="form-horizontal">
+                                <div class='card-body'>
+                                    <div class="card card-info">
+                                        <div class="card-header">
+                                            <h3 class="card-title">Clustering</h3>
+                                        </div>
+                                        <!-- Date -->
+                                        <div class="form-group">
+                                            <div class="mt-4 mx-4 mb-0">
+                                                <div class="input-group date" id="reservationdate" data-target-input="nearest">
+                                                    <input type="text" class="form-control datetimepicker-input" data-target="#reservationdate" name="date" id="date" placeholder="Date" />
+                                                    <div class="input-group-append" data-target="#reservationdate" data-toggle="datetimepicker">
+                                                        <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class='custom-file m-4'>
+                                            <div class="col-10 ">
+                                                <input type='file' class='custom-file-input' name='file' id='file' placeholder="Select File">
+                                                <label class='custom-file-label' for='file'>Select file</label>
+                                            </div>
+                                        </div>
+
+                                        <div class="card-footer">
+                                            <div class="input-form">
+                                                <button type='submit' class='btn btn-primary'>Upload file</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
 
             <div class="card-body p-0">
-                <table class="table table-sm">
+                <table class="table table-striped table-hover">
                     <thead>
                         <tr>
-                            <th style="width: 10px">#</th>
-
-                            <th>Nama</th>
-
-
-                            <th>Delete</th>
+                            <th hidden="hidden"></th>
+                            <th style="width: 10px">No.</th>
+                            <th>NIK</th>
+                            <th>KPI</th>
+                            <th>Performance</th>
+                            <th>Competency</th>
+                            <th>Learning Point</th>
+                            <th>Kerja Ibadah</th>
+                            <th>Apresiasi</th>
+                            <th>Lebih Cepat</th>
+                            <th>Aktif Bersama</th>
+                            <th>Action</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody class="table-striped">
                         {% for user in userDetails %}
                         <tr>
-                            <td>{{user[0]}}</td>
+                            <td hidden="hidden">{{user[0]}}</td>
+                            <td>{{loop.index}}</td>
                             <td>{{ user[1]}}</td>
+                            <td>{{ user[2]}}</td>
+                            <td>{{ user[3]}}</td>
+                            <td>{{ user[4]}}</td>
+                            <td>{{ user[5]}}</td>
+                            <td>{{ user[6]}}</td>
+                            <td>{{ user[7]}}</td>
+                            <td>{{ user[8]}}</td>
+                            <td>{{ user[9]}}</td>
                             <td>
                                 <a href="/delete/{{ user[0] }}" class="btn btn-danger btn-xs" onclick="return confirm('Are You Sure For Delete?')">Delete</a>
                             </td>
-
-                            <td><span class="badge bg-danger">55%</span></td>
                         </tr>
 
                         {% endfor %}
