Cluster result view

--- a/templates/clustering-result.html
+++ b/templates/clustering-result.html
@@ -7,7 +7,7 @@
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1 class="m-0">Clustering Result</h1>
+                    <h1 class="m-0">Clustering Result {{date}}</h1>
                 </div>
 
             </div>
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 -->
-            <table class="table table-sm" class="table table-bordered table-striped">
+            <table class="table table-sm" class="table table-bordered table-striped ">
                 <thead>
                     <tr>
                         <th style="width: 10px">No.</th>
