--- a/templates/header.html
+++ b/templates/header.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sistem Penilaian</title>
-    <link rel="stylesheet" href="https://adminlte.io/themes/v3/plugins/daterangepicker/daterangepicker.css" >
+    <link rel="stylesheet" href="https://adminlte.io/themes/v3/plugins/daterangepicker/daterangepicker.css">
     <!-- Google Font: Source Sans Pro -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
     <!-- Font Awesome -->
@@ -109,7 +109,7 @@
 
                                 </p>
                             </a>
-                            <!--
+
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
                                     <a href="/datapenilaian" class="nav-link {% if submenu=='penilaian' %} active{% endif %}">
@@ -118,7 +118,7 @@
                                     </a>
                                 </li>
                             </ul>
-                            -->
+
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
                                     <a href="/clustering" class="nav-link {% if submenu=='clustering' %} active{% endif %}">
@@ -146,7 +146,7 @@
                             </ul>-->
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="/asosiasiData" class="nav-link {% if submenu=='asosiasiData' %} active{% endif %}">
+                                    <a href="/associationResult" class="nav-link {% if submenu=='associationResult' %} active{% endif %}">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Asosiasi Result</p>
                                     </a>
