--- a/templates/datapenilaian.html
+++ b/templates/datapenilaian.html
@@ -1,5 +1,6 @@
 {%include 'header.html'%}
-
+<script src='https://cdn.plot.ly/plotly-2.14.0.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js'></script>
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
@@ -18,7 +19,9 @@
     <!-- /.content-header -->
     <!-- Main content -->
     <section class="content">
+
         <div class="btn-group">
+
 
             <button type="button" class="btn btn-outline-warning  pull-right" data-toggle="modal" data-target="#myModal">Add Data Per Item</button>
             <button type="button" class="btn btn-outline-warning  pull-right" data-toggle="modal" data-target="#uploadFile">Add Data Via File</button>
@@ -201,4 +204,6 @@
 <!-- /.content -->
 </div>
 <!-- /.content-wrapper -->
+<script>
+</script>
 {% include 'footer.html'%}
