--- a/templates/header.html
+++ b/templates/header.html
@@ -117,7 +117,7 @@
 
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="/datapenilaian" class="nav-link {% if submenu=='penilaian' %} active{% endif %}">
+                                    <a href="/datapenilaian" class="nav-link {% if submenu=='datapenilaian' %} active{% endif %}">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Data Penilaian</p>
                                     </a>
@@ -126,9 +126,9 @@
 
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="/clustering" class="nav-link {% if submenu=='clustering' %} active{% endif %}">
+                                    <a href="/normalisasi" class="nav-link {% if submenu=='normalisasi' %} active{% endif %}">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>Clustering</p>
+                                        <p>Data Normalisasi</p>
                                     </a>
                                 </li>
                             </ul>
